--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -67,10 +67,16 @@ body {
   }
 }
 
+ .navbar-header .navbar-brand {
+       color: #01579B; /* Green 3c763d*/
+       font-weight: 700;
+   }
+   
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 1200px;
   }
 
   /* Remove the padding we set earlier */
